Tag suggester have scrollbar now, icon should embeded in plugin, fix some css error

--- a/src/less/suggest.less
+++ b/src/less/suggest.less
@@ -5,7 +5,33 @@
     font-size: 18px;
     width: 100%;
     height: 100%;
-  }
+
+    > ::-webkit-scrollbar{
+       width:2px;
+       height:16px;
+       background-color:#F5F5F5;
+    }
+   
+    > ::-webkit-scrollbar-track
+    {
+    //    -webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.3);
+    //    border-radius:10px;
+       background-color:#F5F5F5;
+    }
+   
+    ::-webkit-scrollbar-thumb
+    {
+    //    border-radius:10px;
+    //    -webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3);
+       background-color:#555;
+    }
+
+    ::-webkit-scrollbar-track-piece
+    {
+        background-color:rgb(255, 255, 255);
+    }
+}
+
   .rta__loader.rta__loader--empty-suggestion-data {
     display: none;
     border-radius: 3px;
@@ -45,7 +71,7 @@
     padding: 0;
     background: #fff;
     border: 1px solid #dfe2e5;
-    border-radius: 8px;
+    border-radius: 0px;
     box-shadow: 0 0 10px rgba(27, 31, 35, 0.1);
     list-style: none;
   }
@@ -59,6 +85,7 @@
     cursor: pointer;
   }
   .rta__item {
+    text-overflow: "ellipsis";
     line-height: 30px;
   }
   .rta__item:fisrt-child{
@@ -68,7 +95,7 @@
     border-bottom: 1px solid #ecedee;
   }
   .rta__item:last-child{
-    border-radius: 0px 0px 8px 8px;
+    border-radius: 0px 0px 0px 0px;
   }
   .rta__entity > * {
     padding-left: 4px;
