--- a/styles.css
+++ b/styles.css
@@ -228,6 +228,20 @@ div[data-type="memos_view"] .scroll::-webkit-scrollbar {
   width: 100%;
   height: 100%;
 }
+.rta > ::-webkit-scrollbar {
+  width: 2px;
+  height: 16px;
+  background-color: #F5F5F5;
+}
+.rta > ::-webkit-scrollbar-track {
+  background-color: #F5F5F5;
+}
+.rta ::-webkit-scrollbar-thumb {
+  background-color: #555;
+}
+.rta ::-webkit-scrollbar-track-piece {
+  background-color: #ffffff;
+}
 .rta__loader.rta__loader--empty-suggestion-data {
   display: none;
   border-radius: 3px;
@@ -267,7 +281,7 @@ div[data-type="memos_view"] .scroll::-webkit-scrollbar {
   padding: 0;
   background: #fff;
   border: 1px solid #dfe2e5;
-  border-radius: 8px;
+  border-radius: 0px;
   box-shadow: 0 0 10px rgba(27, 31, 35, 0.1);
   list-style: none;
 }
@@ -281,6 +295,7 @@ div[data-type="memos_view"] .scroll::-webkit-scrollbar {
   cursor: pointer;
 }
 .rta__item {
+  text-overflow: "ellipsis";
   line-height: 30px;
 }
 .rta__item:fisrt-child {
@@ -290,7 +305,7 @@ div[data-type="memos_view"] .scroll::-webkit-scrollbar {
   border-bottom: 1px solid #ecedee;
 }
 .rta__item:last-child {
-  border-radius: 0px 0px 8px 8px;
+  border-radius: 0px 0px 0px 0px;
 }
 .rta__entity > * {
   padding-left: 4px;
